--- a/0. Test/source/index.html
+++ b/0. Test/source/index.html
@@ -63,7 +63,7 @@
           <div class="about__inner-wrapper">
             <h2 class="about__title">About us</h2>
             <p class="about__description about__description--sup">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at velit maximus, molestie est a, tempor magna.</p>
-            <p class="about__description">Integer ullamcorper neque eu purus euismod, ac faucibus mauris posuere. Morbi non<br> ultrices ligula. Sed dictum, enim sed ullamcorper feugiat, dui odio vehicula eros, a sollicitudin lorem quam nec sem. Mauris tincidunt feugiat diam convallis pharetra. Nulla facilisis semper laoreet.</p>
+            <p class="about__description">Integer ullamcorper neque eu purus euismod, ac faucibus mauris posuere. Morbi non ultrices ligula. Sed dictum, enim sed ullamcorper feugiat, dui odio vehicula eros, a sollicitudin lorem quam nec sem. Mauris tincidunt feugiat diam convallis pharetra. Nulla facilisis semper laoreet.</p>
           </div>
           <picture>
             <source type="image/webp" media="(min-width: 960px)" srcset="img/fire-desktop.webp 1x, img/fire-desktop@2x.webp 2x">
